# pixiv-api

./: .gitignore  Cargo.toml  README.md
scripts/: pixiv_auth.py
src/: api.rs  auth.rs  error.rs  lib.rs  model.rs
