[package]
name = "pixiv-api"
version = "0.1.1"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bytes = "1.7.2"
chrono = "0.4.38"
reqwest = { version = "0.12.8", features = ["json"] }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.64"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1.40"
